# fakedata-mcp

./: LAUNCHGUIDE.md  README.md  pyproject.toml
src/fakedata_mcp/: __init__.py  server.py  transport.py
src/fakedata_mcp/services/: generate_addresses_service.py  generate_companies_service.py  generate_dataset_service.py  generate_text_service.py  generate_transactions_service.py  generate_users_service.py
src/fakedata_mcp/tools/: generate_addresses.py  generate_companies.py  generate_dataset.py  generate_text.py  generate_transactions.py  generate_users.py
tests/: test_generate_addresses.py  test_generate_companies.py  test_generate_dataset.py  test_generate_text.py  test_generate_transactions.py  test_generate_users.py  test_server.py
