[project]
name = "fakedata-mcp"
version = "0.1.0"
description = "Generate realistic fake data for testing and development. Create users, companies, transactions, addresses, and custom datasets in JSON or CSV format."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
fakedata-mcp = "fakedata_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fakedata_mcp"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
